# cii101

./: README.md
flask_practice/: README.md  app.py  dict_test.py  main.py  model.py  pymysql_practice.ipynb  pyproject.toml  utils.py
pyenv_poetry/: pyproject.toml
pyetl/: README.md  json_example.py  p_014_pandas_read_sql.ipynb  p_01_requests_practice.ipynb  p_02_ptt_get_article.py  p_02_ptt_get_article_content.py  p_03_ptt_get_article_content.py  p_04_json.py  p_05_selenium_ptt.py  p_06_selenium_dcard.py  p_07_selenium_ptt_practice.py  p_08_selenium_hub.py  p_09_pandas_practice.ipynb  p_10_pandas_ptt.ipynb  p_11_pandas_concat.ipynb  p_12_cumcount.ipynb  p_13_datapipeline.py  ptt.csv  ptt_no_column.csv  pyproject.toml  test.ipynb  test.py  test_extract_article_content.py  test_open.py  tmp_open.txt
pyetl/ptt_article/: Fw [公告] Clarify板徵文(自殺防治宣導)發錢.txt  Fw [公告] 請留意新註冊帳號使用信件詐騙.txt  Re [問卦] 如果今天是成年壯碩男拿刀 還有人敢奪刀.txt  Re [問卦] 鄭捷死了還發生一樣的事 死刑根本沒用？.txt  Re [新聞] 人妻生出「黑娃娃」堅決沒劈腿！尪崩潰.txt  Re [新聞] 圖利女兒為波波醫生開後門？綠委賴惠員：.txt  Re [新聞] 我不服、我抗議！　陳佩琪曝約談內容：柯.txt  Re [爆卦] 台灣彩券黃X源 蔡X萍 陳X正.txt  [公告] 八卦板板規(2024.07.21).txt  [公告] 財政部 雲端發票事件公告.txt  [問卦] Ryuuu跟第三方女生都縮了？.txt  [問卦] 「我到了」有粗暴一點的說法嗎？.txt  [問卦] 悲報！高雄變好冷.txt  [問卦] 我覺得國三幹起來比國一爽欸.txt  [問卦] 搭捷運要先安檢 你真的可以？？.txt  [問卦] 有推薦防物穿的裝嗎？.txt  [問卦] 波波蜜月期？.txt  [問卦] 肥宅有參加中信兄弟封王遊行加幾分.txt  [問卦] 覺青說死刑不能嚇阻犯罪，那更輕的刑責呢.txt  [問卦] 讚數高等於很多人同意？買讚很難嗎？.txt  [問卦] 這種抽獎能相信嗎？.txt  [問卦]鄉民如果國中就生小孩，父母養得起嗎？.txt  [新聞] 富二代開淫趴！百萬女網紅「收錢上空」　江宛庭：整艘遊艇只.txt
pyetl/res_gossiping/: Fw_ _公告_ 請留意新註冊帳號使用信件詐騙.txt  Fw_ _新聞_ 慶祝中華隊衝進總冠軍！4大超商「買一.txt  Re_ _問卦_ 12強賽是不是二三軍之戰？.txt  (+541 more)
(+1 files in other folders)
