[tool.poetry]
name = "pyetl"
version = "0.1.0"
description = ""
authors = ["uuboyscy <aegis12321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.26.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
